--- a/style.css
+++ b/style.css
@@ -3,3 +3,19 @@ body {
     background-color: #EDEBD7;
     text-align: center;
   }
+
+h1 {
+    color: #423E37;
+}
+
+h2 {
+    color: #423E37;
+}
+
+h3 {
+    color: #423E37;
+}
+
+p{
+    color: #423E37;
+}
