--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background: white;
     background-color: #EDEBD7;
     text-align: center;
+    font-family: 'Raleway', sans-serif;
   }
 
 h1 {
