--- a/style.css
+++ b/style.css
@@ -23,10 +23,10 @@ p{
 
 
 select {
-    width: 10rem;
+    width: 20rem;
     background-color: #DCD9D9;
     border: #423E37 2px solid;
-    padding: 5px 10px;
+    padding: 5px;
 
 }
 
