--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* Body Styling */
@@ -23,8 +23,20 @@ body {
 }
 
 /* Text Styling */
-h1, h2, h3 {
-    font-size: 2rem;
+h1{
+    font-size: 3 rem;
+    color: #fff;
+}
+
+h2{
+    letter-spacing: 7px;
+    font-size: 30px;
+    padding: 15px;
+    color: #fff;
+}
+
+h3{
+    padding: 15px;
     color: #fff;
 }
 
