--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h1{
 
 h2{
     letter-spacing: 7px;
+    text-transform: uppercase;
     font-size: 30px;
     padding: 15px;
     color: #fff;
@@ -81,4 +82,8 @@ button:hover {
 
 button:active {
     transform: scale(0.95);
+}
+
+@view-transition{
+    navigation: auto;
 }
