--- a/style.css
+++ b/style.css
@@ -122,9 +122,9 @@ select {
 }
 
 .unselected{
-    background-color:rgb(230, 230, 230)
-
+    background-color:rgb(230, 230, 230);
 }
+
 @view-transition{
     navigation: auto;
 }
