--- a/style.css
+++ b/style.css
@@ -59,6 +59,28 @@ select {
 
 
 /* Button Styling */
+
+/* normal button*/
+button{
+    --color: #FFF;
+    padding: 0.8em 1.7em;
+    background-color: transparent;
+    border-radius: .3em;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: .5s;
+    font-weight: 400;
+    font-size: 17px;
+    border: 1px solid;
+    font-family: inherit;
+    text-transform: uppercase;
+    color: var(--color);
+    z-index: 1;
+    margin: 15px;
+}
+
+/* everything else */
 .button {
     --color: #FFF;
     padding: 0.8em 1.7em;
@@ -202,7 +224,7 @@ select {
     position: absolute;
     border-radius: 50%;
     z-index: -1;
-    background-color: #333;
+    background-color: #a060ca;
 }
 
 .unselected::before {
