--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: url('https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHRwd2ZmcDI5ajB6Z3ZwY3NraGp2MTZjejkwb3Fhemk2N2YybmF2YiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/UYBDCJjwOd9Re/giphy.gif   ') repeat; /* Replace with your GIF URL */
+    /* background: url('https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHRwd2ZmcDI5ajB6Z3ZwY3NraGp2MTZjejkwb3Fhemk2N2YybmF2YiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/UYBDCJjwOd9Re/giphy.gif   ') repeat; Replace with your GIF URL */
+    background: black;
     background-size: cover; /* Ensure the GIF covers the whole screen */
     color: #fff;
     padding: 20px;
@@ -37,6 +38,7 @@ h2{
 }
 
 h3{
+    letter-spacing: 1px;
     padding: 15px;
     color: #fff;
 }
