--- a/style.css
+++ b/style.css
@@ -268,3 +268,60 @@ button:not(.button):hover {
     box-shadow: 0 0 20px 5px rgba(255, 255, 255, 0.9);
     color: white;
 }
+/* uhhhhhhhh */
+.form__group {
+  position: relative;
+  padding: 15px;
+  margin: 10px;
+  width: 50%;
+}
+
+.form__field {
+  font-family: inherit;
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid white;
+  outline: 0;
+  text-align: center;
+  font-size: 1.3rem;
+  color: white;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+
+  &::placeholder {
+    color: transparent;
+  }
+
+  &:placeholder-shown ~ .form__label {
+    font-size: 1.3rem;
+    cursor: text;
+    top: 20px;
+  }
+}
+
+.form__label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: white;
+}
+
+.form__field:focus {
+  ~ .form__label {
+    position: absolute;
+    top: 0;
+    display: block;
+    transition: 0.2s;
+    font-size: 1rem;
+    color: primary;
+    font-weight:700;    
+  }
+
+
+/* reset input */
+.form__field{
+  &:required,&:invalid { box-shadow:none; }
+}
