--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url('background.png'); /* Replace with your image file */
+    background-image: url('bruh.png'); /* Replace with your image file */
     /* background: black; */
     background-size: cover; /* Ensure the GIF covers the whole screen */
     color: #fff;
@@ -88,7 +88,6 @@ select {
 
 
 /* Button Styling */
-
 /* normal button*/
 button{
     --color: #FFF;
@@ -268,6 +267,7 @@ button:not(.button):hover {
     box-shadow: 0 0 20px 5px rgba(255, 255, 255, 0.9);
     color: white;
 }
+
 /* uhhhhhhhh */
 .form__group {
   position: relative;
